	*** RELEASE 7.3RC1 ***

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>
	
	* configure.in:
	* src/gcompris/gcompris_db.c: (gcompris_db_init): patch by Yves from 7.4 branch to remove sqlite
	  database if it is empty.

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>

	New icons from Franck Doucet.
	
	* boards/boardicons/eye_colors.png:
	* boards/boardicons/geometry.png:
	* boards/boardicons/memory_elephant.png:
	* boards/boardicons/submarine.png:
	* boards/gtans/gtans_2x-rotate-left.png:
	* boards/gtans/gtans_2x-rotate.png:
	* boards/gtans/gtans_outline.png:
	* boards/gtans/gtans_rotate-left.png:
	* boards/gtans/gtans_rotate.png:
	* boards/gtans/gtans_show.png:
	* boards/submarine/submarine-broken.png:
	* boards/submarine/submarine.png:
	* src/boards/gtans_interface.c: (create_mainwindow):

2006-02-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/awele.xml.in: Removed for 7.3 release, Yves remade it for 7.4, the current version
	                       has many problems.
	* src/boards/python/electric.py: removed the diode. will reintroduce it only when the wire
	  renumbering will be correct for gnucap (always a 0 wire)

2006-02-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/advanced_colors.c: (add_xml_data): fixed to check properly for long locale (e.g. pt_BR)
	* src/boards/read_colors.c: (add_xml_data), (parse_doc): -
	* src/boards/python/melody.py: added a dialog if run without sound fx activated
	  changed to use the reload icon instead of mouth sign for the repeat.

2006-02-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Changed background entry color to white. The blue background color
	was no more working for me for no reason.

	* src/boards/python/guessnumber.py:

2006-02-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed eu alphabet to use unicode formatting.

	* boards/sounds/eu/alphabet/c.ogg:
	* boards/sounds/eu/alphabet/d.ogg:
	* boards/sounds/eu/alphabet/e.ogg:
	* boards/sounds/eu/alphabet/f.ogg:
	* boards/sounds/eu/alphabet/g.ogg: