@@ -3,8 +3,8 @@
   <Board
 	 name="awele"
 	 type="awele"
-	 section="/strategy"
-	 difficulty="0"
+	 section="/experimental"
+	 difficulty="2"
 	 icon="boardicons/awele.png"
 	 author="Frédéric Mazzarol"
 	 boarddir="awele">
