@@ -247,6 +247,7 @@ src/boards/python/gnumch.py
 src/boards/python/guessnumber.py
 src/boards/python/login.py
 src/boards/python/mosaic.py
+src/boards/python/melody.py
 src/boards/python/pythontest.py
 src/boards/python/redraw.py
 src/boards/python/searace.py
